Back end and front end interworking completed
2nd Code

--- a/public/login.html
+++ b/public/login.html
@@ -94,7 +94,7 @@
 
           <div class="content">
                   <input id="id" name="id" type="text"  autocomplete="off" placeholder="아이디" class="element">
-                   <input id="id" name="id" type="password"  autocomplete="off" placeholder="비밀번호" class="element">
+                   <input pw="pw" name="pw" type="password"  autocomplete="off" placeholder="비밀번호" class="element">
                   <button class="buttonlogin actionbutton" type="submit" value="submit" name="">로그인</button>
                   <p><input type="checkbox" id="al"> 로그인 상태 유지</p>
           </div>
