--- a/public/login.html
+++ b/public/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>로그인</title>
 </head>
 
 <body>
@@ -90,11 +90,11 @@
 
   <div class="container-fluid">
     <!-- <form method="post" action="/process/Login"> -->
-      <form class="paypal-form" method="post" action="/process/Login">
+      <form class="paypal-form" method="get" action="/process/Login">
 
           <div class="content">
                   <input id="id" name="id" type="text"  autocomplete="off" placeholder="아이디" class="element">
-                   <input id="id" name="id" type="password"  autocomplete="off" placeholder="비밀번호" class="element">
+                   <input pw="pw" name="pw" type="password"  autocomplete="off" placeholder="비밀번호" class="element">
                   <button class="buttonlogin actionbutton" type="submit" value="submit" name="">로그인</button>
                   <p><input type="checkbox" id="al"> 로그인 상태 유지</p>
           </div>
