--- a/create_account.html
+++ b/create_account.html
@@ -86,18 +86,18 @@
     <a href="index.html"><img src="src/logo.png" width="235" id="mainLogo"></a>
   </div>
   <div class="container-fluid">
-    <form class="paypal-form" action="/process/create_account" method="post">
+    <form class="paypal-form" action="" method="post">
       <div class="content">
         아이디
-        <input id = "id" name="id" type="text"  autocomplete="off" class="element">
+        <input name="id" type="text"  autocomplete="off" class="element">
         비밀번호
-        <input pw = "pw" name="pw" type="password"  autocomplete="off" class="element">
+        <input name="pwd1" type="password"  autocomplete="off" class="element">
         비밀번호 재확인
-        <input pw = "pw" name="pw" type="password"  autocomplete="off" class="element">
+        <input name="pwd2" type="password"  autocomplete="off" class="element">
         주민등록 등본(초본)스캔본
         <input  name="profile" type="file" autocomplete="off" placeholder="dd" id="profile">
         <label for="profile" class="label_profile">사진 첨부하기</label>
-        <button class="buttonlogin actionbutton" vlaue="submit" name ="" type="submit">가입하기</button>
+        <button class="buttonlogin actionbutton" type="submit">가입하기</button>
       </div>
     </form>
   </div>
