--- a/log_in.html
+++ b/log_in.html
@@ -7,6 +7,11 @@
 
   <body>
     <style>
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+
       #logo{
         text-align: center;
         margin-top:10%;
@@ -50,7 +55,7 @@
           margin-bottom:10px;
           border: 1px solid #9da3a6;
           background: #fff;
-          border-radius: 5px;
+          border-radius: 2px;
       }
       .grid{
         display:grid;
@@ -91,12 +96,12 @@
         <form class="paypal-form">
             <div class="content">
                 <input id="id" name="id" type="text"  autocomplete="off" placeholder="아이디" class="element">
-                 <input id="id" name="id" type="password"  autocomplete="off" placeholder="비밀번호" class="element">
+                 <input id="pw" name="pw" type="password"  autocomplete="off" placeholder="비밀번호" class="element">
                 <button class="buttonlogin actionbutton" type="submit">로그인</button>
                 <p><input type="checkbox" id="al"> 로그인 상태 유지</p>
             </div>
             <div class="grid">
-                <div id="div1">아이디 찾기</div><div id="div2">개인키 찾기</div><div id="div3">회원가입</div>
+              <div id="div1">아이디 찾기</div><div id="div2">비밀번호 찾기</div><div id="div3" ><a href="create_account.html">회원가입</a></div>
             </div>
         </form>
     </div>
