--- a/mypage.html
+++ b/mypage.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <div id="login_section">
-    <a href="login.html"><img src="src/loginbut.png" width="210" id="loginbut"></a>
+    <a href="log_in.html"><img src="src/loginbut.png" width="210" id="loginbut"></a>
     <div id="loginnav">
       <a>아이디 / 비밀번호 찾기</a>
-      <a href="create_account.html" class="right">회원가입</a>
+      <a class="right" href="create_account.html">회원가입</a>
     </div>
   </div>
 </body>
