--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="utf-8">
   <title>Auctionly</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -32,7 +33,7 @@
       <ul>
         <li><a>낙찰가의 관련서류 열람은 언제부터?</a><span>[1]</span></li>
         <li><a>안녕하세요 많은 가르침 부탁드립니다.</a><span>[3]</span></li>
-        <li><a>10년이 지난 가처분</a></a><span>[1]</span></li>
+        <li><a>10년이 지난 가처분</a><span>[1]</span></li>
         <li><a>꼭 읽어주시고 답변 부탁드립니다.</a><span>[2]</span></li>
         <li><a>경매입찰서 작성방법 문의</a><span>[3]</span></li>
         <li><a>강제집행비용 예상?</a><span>[1]</span></li>
@@ -47,170 +48,11 @@
 
       <div id="hotauction">
         <div id="hottitle">
-          <p class="leftnav">HOT 경매결과</p>
-          <a class="rightnav">더보기</a>
+          <p class="leftnav">HOT 경매</p>
+          <a class="rightnav" href="hot_results.html">더보기</a>
         </div>
         <div id="hotproducts">
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
-          <div class="oneproduct">
-            <img src="src/houseimg.jpg" width="150" height="155">
-            <p class="productname">김해시 공장</p>
-            <p class="price">
-              <span class="gam">감</span>
-              <span class="gamprice">1,527,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="jeo">저</span>
-              <span class="jeoprice">927,364,723원</span>
-            </p><br>
-            <p class="price">
-              <span class="nak">낙</span>
-              <span class="nakprice">827,364,723원</span>
-            </p>
-          </div>
+
         </div>
       </div>
     </div>
@@ -219,11 +61,14 @@
   <div id="footer-placeholder"></div>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-
+  <script src="js/hotproducts.js"></script>
+  <script src="src/js/web3.min.js"></script>
+  <script src="src/js/truffle-contract.js"></script>
+  <script src="src/index.js"></script>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
       $(function(){
@@ -235,8 +80,23 @@
       });
 
       $(function(){
-          $("#mypage").load("mypage.html");
+          $("#mypage").load("mypage_login.html");
       });
+
+      let prod = [
+          { s: 'src/pics/1.jpg', name: '김해시 공장', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/2.jpeg', name: '인천시 근린상가', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/3.jpeg', name: '인천시 복합상가', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/4.jpg', name: '인천시 빌라', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/5.jpeg', name: '인천시 아파트', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/6.jpg', name: '고양시 공장', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/7.jpg', name: '서대문구 근린상가', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/8.jpeg', name: '서대문구 복합상가', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/9.jpeg', name: '서대문구 빌라', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' },
+          { s: 'src/pics/10.jpg', name: '서대문구 아파트', gp: '1,527,364,723원', jp: '927,364,723원', np: '827,364,723원' }
+      ];
+
+      renderHot('hotproducts', 'oneproduct', prod);
   </script>
 </body>
 
